feat: align study outcomes with ERP
